@@ -1,9 +1,13 @@
 package gumga.framework.application.service;
 
 import gumga.framework.application.customfields.GumgaCustomEnhancerService;
+import gumga.framework.core.exception.NoMultiTenancyException;
 import gumga.framework.core.utils.ReflectionUtils;
+import gumga.framework.domain.GumgaMultitenancy;
 import gumga.framework.domain.customfields.GumgaCustomizableModel;
+import gumga.framework.domain.domains.GumgaOi;
 import gumga.framework.domain.repository.GumgaCrudRepository;
+import gumga.framework.domain.repository.GumgaMultitenancyUtil;
 import java.io.Serializable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -30,7 +34,27 @@ public abstract class AbstractGumgaService<T, ID extends Serializable> {
         if (entity instanceof GumgaCustomizableModel) {
             gces.loadCustomFields((GumgaCustomizableModel) entity);
         }
+    }
 
+    public GumgaOi gumgaOiForSearch() {
+        try {
+            String oiPattern = GumgaMultitenancyUtil.getMultitenancyPattern(clazz().getAnnotation(GumgaMultitenancy.class));
+            GumgaOi oi = new GumgaOi(oiPattern);
+            return oi;
+        }
+        catch(Exception ex){
+            throw new NoMultiTenancyException("The class "+clazz().getCanonicalName()+" haven't MultiTenancy" );
+        }
+    }
+    public GumgaOi gumgaOiForSearchWithWildCard() {
+        try {
+            String oiPattern = GumgaMultitenancyUtil.getMultitenancyPattern(clazz().getAnnotation(GumgaMultitenancy.class));
+            GumgaOi oi = new GumgaOi(oiPattern.concat("%"));
+            return oi;
+        }
+        catch(Exception ex){
+            throw new NoMultiTenancyException("The class "+clazz().getCanonicalName()+" haven't MultiTenancy" );
+        }
     }
 
 }
