@@ -15,6 +15,8 @@ Framework Backend
 - Create class GumgaTenancyUtils that contains the method changeOi
 - System.out.println changed to Logger.log
 - GumgaRevisionEntity passa a utilizar o sequence SEQREV e não mais o hibernate_sequence
+- Added method in the class AbstractGumgaService methods gumgaOiForSearchWithWildCard and gumgaOiForSearch
+- Created Class NoMultiTenancyException
 
 1.2.13 and Before
 =============
